# mpvqt

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  MpvQtConfig.cmake.in  README.md
cmake/: FindYouTubeDl.cmake  FindYtdlp.cmake
examples/multiple-video-players/: CMakeLists.txt  Main.qml  mpvitem.cpp
examples/video-player/: CMakeLists.txt  Main.qml  main.cpp  mpvitem.cpp  mpvitem.h  mpvproperties.h  qml.qrc.license
src/: CMakeLists.txt  mpvabstractitem.cpp  mpvabstractitem.h  mpvabstractitem_p.h  mpvcontroller.cpp  mpvcontroller.h  mpvcontroller_p.h  mpvrenderer.cpp  mpvrenderer.h
